# enzarb

./: .dockerignore  .gitignore  .golangci.yml  .trivyignore  CLAUDE.md  VERSION  go.mod  go.sum  go.work  go.work.sum  mise.toml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/.cargo/: audit.toml
agent/examples/: acp_spike.rs
agent/src/: auth.rs  init.rs  internal.rs  main.rs  path_utils.rs  process.rs  terminal.rs  tmux.rs
agent/src/acp/: events.rs  mod.rs  permissions.rs  providers.rs  session.rs  store.rs
app/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: app.d.ts  hooks.server.ts
app/src/lib/: agentToken.ts  app.css  billing.ts  config.ts  confirm.ts  crypto.ts  db.ts  domainVerify.test.ts  domainVerify.ts  errors.ts  gitea.ts  invoicePdf.ts  jwt.ts  k8s.ts  orgs.ts  privileges.ts  session.ts  settings.ts  workspaceHealth.svelte.ts  zot.ts
app/src/lib/agent/: AgentPane.svelte  AskUserQuestion.svelte  DiffView.svelte  Markdown.svelte  MarkdownInline.svelte  PermissionPrompt.svelte  PlanView.svelte  ToolCallCard.svelte  agentSocket.ts  lineDiff.ts  notifications.ts  types.ts
app/src/lib/components/: BlameViewer.svelte  Button.svelte  CodeViewer.svelte  CommitList.svelte  ConfirmDialog.svelte  Dropdown.svelte  LineChart.svelte  StackedBarChart.svelte  Tooltip.svelte
app/src/lib/remote/: admin.remote.ts  billing.remote.ts  environments.remote.ts  files.remote.ts  guard.ts  issues.remote.ts  members.remote.ts  onboarding.remote.ts  orgs.remote.ts  projects.remote.ts  registry.remote.ts  session.remote.ts  settings.remote.ts  utilization.remote.ts
app/src/lib/terminal/: TerminalPane.svelte  VirtualKeyboard.svelte  keyboard.ts  links.ts
app/src/lib/tiling/: FileSidebar.svelte  FileTreeNode.svelte  NewPaneDialog.svelte  TilingPane.svelte  TilingRegion.svelte  TilingShell.svelte  TilingSplitHandle.svelte  layout.ts
app/src/remote/: admin.ts  billing.ts  environments.ts  files.ts  projects.ts  registry.ts
app/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
app/src/routes/(app)/: +layout.server.ts  +layout.svelte
app/src/routes/(app)/[namespace]/billing/: +page.svelte
app/src/routes/(app)/[namespace]/projects/: +page.svelte
app/src/routes/(app)/[namespace]/projects/[project]/: +layout.svelte  +page.svelte
app/src/routes/(app)/[namespace]/projects/new/: +page.svelte
app/src/routes/(app)/[namespace]/settings/: +page.svelte
app/src/routes/(app)/admin/: +page.server.ts  +page.svelte
app/src/routes/(app)/dashboard/: +page.server.ts  +page.svelte
app/src/routes/(app)/tiling/: +page@.svelte
app/src/routes/.well-known/jwks.json/: +server.ts
app/src/routes/.well-known/revoked-jtis/: +server.ts
app/src/routes/api/client-error/: +server.ts
app/src/routes/auth/callback/: +server.ts
app/src/routes/auth/confirm-link/: +page.server.ts  +page.svelte
app/src/routes/auth/github/callback/: +server.ts
app/src/routes/auth/github/connect/: +server.ts
app/src/routes/auth/github/login/: +server.ts
app/src/routes/auth/login/: +page.svelte  +server.ts
app/src/routes/auth/logout/: +server.ts
app/src/routes/onboarding/: +page.server.ts  +page.svelte
authd/: Dockerfile  go.mod  go.sum
authd/cmd/authd/: clientip_test.go  main.go  sign_test.go  token.go  token_test.go
billing/: Dockerfile  go.mod  go.sum
billing/cmd/billing/: main.go
charts/enzarb/: Chart.yaml  values.yaml
charts/enzarb-app/: Chart.yaml  values.yaml
charts/enzarb-app/templates/: deployment.yaml
charts/enzarb-operator/: Chart.yaml  values.yaml
charts/enzarb-operator/templates/: crds.yaml  deployment.yaml  rbac.yaml
charts/enzarb/templates/: acme-selfcheck-resolver.yaml  app.yaml  authd.yaml  billing.yaml  crds.yaml  database.yaml  gateway-policy.yaml  gateway.yaml  gitea-networkpolicy.yaml  metering.yaml  mirror.yaml  namespace-policy.yaml  operator-policy.yaml  operator.yaml  rbac-policy.yaml  rbac.yaml  service-policy.yaml  webhook.yaml
deploy/enzarb/: app.yaml  billing.yaml  enzarb.yaml  metering.yaml  operator.yaml  rbac.yaml
deploy/platform/: database.yaml
deploy/system/: capsule.yaml  cert-manager.yaml  cilium.yaml  dex-theme.yaml  dex.yaml  envoy-gateway.yaml  gitea.yaml  kubelet-credential-provider.yaml  node-profiles.yaml  pgop.yaml  registry-pull-token-injector.yaml  rustfs.yaml  zot-bucket.yaml  zot.yaml
metering/: Dockerfile  go.mod  go.sum
metering/cmd/metering/: main.go
mirror/: Cargo.toml  Dockerfile
mirror/src/: cache.rs  main.rs  proxy.rs  upstream.rs
operator/: Dockerfile  go.mod  go.sum
operator/api/v1alpha1/: doc.go  types.go
operator/cmd/operator/: main.go
operator/config/crd/: enzarb.io_alloweddomains.yaml  enzarb.io_domainclaims.yaml  enzarb.io_environments.yaml  enzarb.io_organizations.yaml  enzarb.io_projects.yaml
operator/internal/admin/: cli.go
operator/internal/controller/: capsule.go  environment_controller.go  environment_domains_test.go  mirror_test.go  organization_controller.go  project_controller.go  prune.go  retention.go  runner_controller.go
operator/internal/gitea/: client.go
operator/internal/webhook/: pod_proxy.go  pod_proxy_test.go
scripts/: pre-commit  setup-gitea-admin.sh  setup-gitea-token.sh  setup-registry-secrets.sh  setup-secrets.sh
webhook/: Cargo.toml  Dockerfile
webhook/src/: main.rs
workspace/: Dockerfile  enzarb-prompt.sh
workspace/credential-helper/: main.go
(+34 files in other folders)
