[package]
name = "project-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "project-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
nix = { version = "0.29", features = ["process", "signal", "ioctl", "fs", "event"] }
portable-pty = "0.8"
inotify = "0.11"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
