[package]
name = "project-agent"
version = "0.11.0"
edition = "2024"

[[bin]]
name = "project-agent"
path = "src/main.rs"

[[bin]]
name = "docker-credential-k8s-sa"
path = "src/bin/docker_credential_k8s_sa.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower = "0.5"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
nix = { version = "0.31.3", features = ["process", "signal", "ioctl", "fs", "event"] }
portable-pty = "0.9.0"
inotify = "0.11"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
