[package]
name = "enzarb-mirror"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "enzarb-mirror"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.7", features = ["trace"] }
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
