[package]
name = "enzarb-webhook"
version = "0.57.1"
edition = "2024"

[[bin]]
name = "enzarb-webhook"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
kube = { version = "0.99", features = ["client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.7", features = ["trace"] }
